--- a/style.css
+++ b/style.css
@@ -1,6 +1,22 @@
 body {
     background: rgb(43,8,51);
 }
+.modal {
+    position: absolute;
+    visibility: visible; /* hidden | visible */
+    z-index: 1;
+    height: 300px;
+    width: 600px;
+    top: 20px;
+    left: 50%;
+    transform: translate( -50%);
+    background: #000000;
+    text-align: center;
+    color: #cc00ff;
+    font-family: Arcade;
+    font-size: 50px;
+
+}
 .upperSection {
     margin: auto;
     height: 600px;
@@ -30,8 +46,11 @@ body {
     width: auto;
     height: 26px;
 }
+.button:hover {
+    color:rgb(245, 130, 239);
+}
 .pressedButton {
-    color:rgb(245, 130, 239)
+    color:rgb(245, 130, 239);
 }
 
 .pen {
