--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
     height: 600px;
     width: 100px;
 }
-.panel_controlElement {
+.panel__controlElement {
     width: 100px;
     height: fit-content;
     border: 1px solid rgb(194, 0, 184);
