--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
     background: rgb(43,8,51);
+    font-family: Arcade;
+    color:rgb(194, 0, 184);
 }
 a {
     color: rgb(245, 130, 239);
@@ -17,9 +19,7 @@ a {
     background: #000000;
     text-align: center;
     color: #cc00ff;
-    font-family: Arcade;
     font-size: 50px;
-
 }
 .stopped {
     padding-top: 270px;
@@ -28,16 +28,20 @@ a {
 .highlightedText {
     color: #ffffff;
 }
-.upperSection {
+.section {
     margin: auto;
-    height: 600px;
-    /* width: auto; */
     display: flex;
-    flex-direction: row;
     justify-content: center;
 }
+.upper {
+    flex-direction: row;
+    height: 600px;
+}
+.lower {
+    flex-direction: column;
+    height: 200px;
+}
 .panel {
-    /* background-color: #5bf646; */
     height: 600px;
     width: 100px;
 }
@@ -50,8 +54,6 @@ a {
     user-select: none;
     background: #000000;
     border: 1px solid rgb(194, 0, 184);
-    color:rgb(194, 0, 184);
-    font-family: Arcade;
     text-align: center;
     font-size: 25px;
     width: auto;
@@ -63,7 +65,6 @@ a {
 .pressedButton {
     color:rgb(245, 130, 239);
 }
-
 .pen {
     position: relative;
     /* margin: auto; */
@@ -76,16 +77,18 @@ a {
     position: absolute;
     width: 18px;
     height: 18px;
-    /* background: rgb(194, 0, 184); */
-    /* border: 1px solid #ffffff; */
 }
 .first {
     background:#5bf646;
-    /* z-index: 2; */
 }
 #food {
     background: rgb(255, 255, 255);
-    /* color: rgb(194, 0, 184); */
+}
+.stats {
+    width: 600px;
+    height: 50px;
+    display: flex;
+    justify-content: space-evenly;
 }
 .control {
     position: relative;
@@ -97,7 +100,6 @@ a {
     padding-top: 0px;
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
     align-items: center;
     border: 1px solid #000000;
 }
@@ -111,21 +113,23 @@ a {
     height: 30px;
     background: rgb(194, 0, 184);
 }
+.stats__icon {
+    text-align: center;
+    font-size: 25px;
+    height: 50px;
+    width: 50px;
+}
 .numbers, .descriptions {
-    
     width: 600px;
-    height: 100px;
-    /* background: olivedrab; */
+    height: 55px;
     color: #cc00ff;
-    font-family: Arcade;
     display: flex;
     flex-direction: row;
     align-items: center;
 }
 .counter, .text{
-    /* border: 1px solid black; */
     text-align: center;
     height: auto;
     width: 300px;
-    font-size: 95px;
+    font-size: 60px;
 }
