--- a/style.css
+++ b/style.css
@@ -24,9 +24,9 @@ a {
     color: #cc00ff;
     font-size: 50px;
 }
-.stopped {
+.dimmed {
     padding-top: 270px;
-    opacity: 80%;
+    opacity: 30%;
 }
 .highlightedText {
     color: #ffffff;
@@ -139,4 +139,13 @@ a {
     height: auto;
     width: 300px;
     font-size: 60px;
+}
+.guideArrow {
+    position: relative;
+    visibility: hidden;
+    width: 88px;
+    height: 88px;
+    background-image: url(graphics/guideArrow.svg);
+    z-index: 1;
+    transition: transform 0s;
 }
